--- a/views/poslovi/posao.ejs
+++ b/views/poslovi/posao.ejs
@@ -123,7 +123,7 @@
                         
                         <!-- Korisnik koji je postavio i datum postavljanja-->
                         <div class="card-header" >
-                            Oglas postavio :  <a href='/svi_korisnici/korisnik/<%-korisnik[0].id%>'><b class="text-warning"><%-korisnik[0].ime%></b></a>
+                            Oglas postavio :  <a href=''><b class="text-warning"> Ime korisnika </b></a>
                             <span class="ml-5 text-right small "><%-posao[0].datum%></span>
                       
                         </div>
