--- a/views/index.ejs
+++ b/views/index.ejs
@@ -78,7 +78,7 @@
 
 
     <!-- Kategorije -->
-    <div class='kategorije bg-secondary ' >
+    <div class='kategorije bg-secondary ' style="border-top: 1px solid rgba(255, 187, 0, 0.705);">
         <div class= 'container bg-secondary ' >
             <div class = 'row'>
 
@@ -145,13 +145,13 @@
 
     <!--Aktuelni poslovi-->
             <!-- Naslov -->
-            <div class="col-xs-1 text-center m-3" >
+            <div class="col-xs-1 text-center  mb-3 mt-3" >
                 <h5>Aktuelni poslovi</h5>
             </div>
             <!-- /Naslov -->
 
             <!-- Sadrzaj -->
-            <div class="container mt-4">
+            <div class="container mt-4 ">
 
                 <!-- Red sa poslovima-->
                 <div class="row m-4">
