Dodata funkcionalnist prijave i odjave posla full

--- a/views/kategorije/kategorija.ejs
+++ b/views/kategorije/kategorija.ejs
@@ -78,7 +78,7 @@
     <div class = 'container bg'>
         <div class=" row text-right" >
             <div class="col-xl-12">
-                <a href="/svi_poslovi/novi_posao" style=" color : white" class=""><i class="fas fa-plus text-success" ></i> Dodaj oglas</a>
+                <a href="/svi_poslovi/novi_posao?kategorijaId=<%=kategorija[0].id%>" style=" color : white" class=""><i class="fas fa-plus text-success" ></i> Dodaj oglas</a>
                 <a href ="/sve_kategorije" class="m-3" style="color: white;"><i class="fas fa-border-all text-warning"></i></i> Vidi sve kategorije</a>
             </div>
             <hr>
